--- a/yummyanime_profile.html
+++ b/yummyanime_profile.html
@@ -102,6 +102,7 @@
                          <li class="right__menu__li"><i id="right" class="fa fa-comment-o"></i><a href="#" class="right__menu__link">Коментарии</a></li>
                          <li class="right__menu__li"><i id="right" class="fa fa-file-text-o"></i><a href="#" class="right__menu__link">Рецензии</a></li>
                          <li class="right__menu__li"><i id="right" class="fa fa-exclamation-triangle"></i><a href="#" class="right__menu__link">Жалобы</a></li>
+                         <li class="right__menu__li"><i id="right" class="fa fa-exclamation-triangle"></i><a href="#" class="right__menu__link">Я не понимаю чё происходит</a></li>
                         </ul>
                     </div>
                 
