Подключил css. Заново....

--- a/yummyanime_profile.html
+++ b/yummyanime_profile.html
@@ -3,8 +3,8 @@
     <head >
     <meta charset="utf-8"/>
         <title>Your Profile</title>
-        <link rel="stylesheet" href="C:\Users\User\Desktop\Yummyanime.com\yummyanime/font-awesome-4.7.0">
-        <link rel="stylesheet" href="C:\Users\User\Desktop\Yummyanime.com\yummyanime/yummyanime_profile.css">
+        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="C:\Users\User\Desktop\yummy/yummyanime_profile.css">
         <style>
             body{
                 background-color: #222222;
