--- a/yummyanime_profile.html
+++ b/yummyanime_profile.html
@@ -3,7 +3,7 @@
     <head >
     <meta charset="utf-8"/>
         <title>Your Profile</title>
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="C:\Users\User\Desktop\yummy/font-awesome-4.7.0">
         <link rel="stylesheet" href="C:\Users\User\Desktop\yummy/yummyanime_profile.css">
         <style>
             body{
