сделал ссылку не профиль

--- a/yummyanime.html
+++ b/yummyanime.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
         <title>Yummyanime</title>
         <link rel="stylesheet" href="yummyanime.css" type="text/css">
-        <link rel="stylesheet" href="C:\Users\User\Desktop\HTML\yummyanime\font-awesome-4.7.0\font-awesome-4.7.0\css\font-awesome.min.css">
+        <link rel="stylesheet" href="C:\Users\User\Desktop\Что-то очень нужное\HTML\tests\font-awesome-4.7.0\font-awesome-4.7.0\css/font-awesome.css">
         <style>
             body{
                 background-color: #222222;
@@ -18,13 +18,13 @@
         </style>
     </head>
     <body>
-    <div class="header">
-            <nav class="header__inner">
-                    <a href="#" class="nav__link">Darkling</a></li>
-                    <a href="#" class="nav__link"><i class="fa fa-bell-o"></i></a></li>
-                    <a href="#" class="nav__link"><i class="fa fa-envelope-o" aria-hidden="true"></i></a></li>
-                    <a href="#" class="nav__link"><i class="fa fa-sign-out" aria-hidden="true"></i></a></li>
-                </nav>
+   <div class="header">
+            <div class="side_menu">
+                <div id="name"><a id="darkling" href="#">Darkling</a></div>
+                <div class="inst"><i class="fa fa-bell-o" aria-hidden="true"></i></div>
+                <div class="inst"><i class="fa fa-envelope-o" aria-hidden="true"></i></div>
+                <div class="inst"><i class="fa fa-sign-out" aria-hidden="true"></i></div>
+            </div>
         </div>
     
             <div class="logo">
