--- a/yummyanime.html
+++ b/yummyanime.html
@@ -21,9 +21,9 @@
    <div class="header">
             <div class="side_menu">
                 <div id="name"><a id="darkling" href="#">Darkling</a></div>
-                <div class="inst"><i class="fa fa-bell-o" aria-hidden="true"></i></div>
-                <div class="inst"><i class="fa fa-envelope-o" aria-hidden="true"></i></div>
-                <div class="inst"><i class="fa fa-sign-out" aria-hidden="true"></i></div>
+                <a href="#"><div class="inst"><i class="fa fa-bell-o" aria-hidden="true"></i></div></a>
+                <a href="#"><div class="inst"><i class="fa fa-envelope-o" aria-hidden="true"></i></div></a>
+                <a href="#"><div class="inst"><i class="fa fa-sign-out" aria-hidden="true"></i></div></a>
             </div>
         </div>
     
