НАчал делать мейн мейн

--- a/yummyanime.html
+++ b/yummyanime.html
@@ -77,58 +77,11 @@
 
 
         <div class="main__info">
-
-
             <input placeholder="НАЙТИ АНИМЕ ПО НАВАЗАНИЮ" class="input"/>
-            <div class="your__profile">
-                <div class="greeting">
-                   <text id="greeting">Ваш профиль, Darkling</text>
-                </div>
-                <img class="photo" src="https://stat.yummyanime.com/img/avatars/173770-1508684241.jpeg" width="200px" height="200px"/>
-                <div class="info__table">
-                <ul class="info__ul">
-                    <li class="info__li">Штрафные баллы: Нет</li>
-                    <li class="info__li">Дата регистрации:22 Окт 2017</li>
-                    <li class="info__li">Группа: Учасник</li>
-                    <li class="info__li"><a href="file:///C:/Users/User/Desktop/HTML/yummyanime/yummyanime_profile.html" class="info__link">Ссылка на этот профиль</a></li>
-                    <li class="info__li">Пол: Мужской</li>
-                </ul>
-                </div>
+            <div class="top_slider">
+                <div class="season"><text id="season">аниме осеннего сезона</text></div>
             </div>
-
-            <div class="my__menu">
-                <div class="greeting">
-                    <text" id="greeting">Мое меню</text>
-                 </div>
-                 <div class="right__menu">
-                     <ul class="right__menu__ul">
-                         <li class="right__menu__li"><i id="right" class="fa fa-users"></i><a href="#" class="right__menu__link">Друзья</a></li>
-                         <li class="right__menu__li"><i id="right"class="fa fa-rss"></i><a href="#" class="right__menu__link">Плдписки</a></li>
-                         <li class="right__menu__li"><i id="right" class="fa fa-comment-o"></i><a href="#" class="right__menu__link">Коментарии</a></li>
-                         <li class="right__menu__li"><i id="right" class="fa fa-file-text-o"></i><a href="#" class="right__menu__link">Рецензии</a></li>
-                         <li class="right__menu__li"><i id="right" class="fa fa-exclamation-triangle"></i><a href="#" class="right__menu__link">Жалобы</a></li>
-                         <li class="right__menu__li"><i id="right" class="fa fa-cog"></i><a href="#" class="right__menu__link">Настройки</a></li>
-                     </ul>
-                 </div>
-                </div>
-                    <div class="slider">
-                        <ul class="slider__ul">
-                            <li class="slider__li"><a href="#" class="slider__link">Любимое (0)</a></li>
-                            <li class="slider__li"><a href="#" class="slider__link">Буду смотреть (19)</a></li>
-                            <li class="slider__li"><a href="#" class="slider__link">Просмотрено (163)</a></li>
-                            <li class="slider__li"><a href="#" class="slider__link">Брошено (11)</a></li>
-                            <li class="slider__li"><a href="#" class="slider__link">Любимое (12)</a></li>
-                        </ul>                 
-                            <div class="slider__bot">
-                                <input class="f-st__find" placeholder="Поиска аниме в этом списке"/>
-                                <a href="#" class="link__bot">Фильтр по жанру</a>
-                                <a href="#" id="s-nd" class="link__bot">Фильтр по типу аниме</a>
-                                <a href="#" id="t-rd" class="link__bot">названию(а-я)</a>
-                            </div>
-                        </div>
-
-
-                
+            
                         <div class="futter">
                             <p class="fuuter__p">Все видео на сайте предоставлены только для ознакомления и не предполагают скачивание.</p>   
                             <text class="fuuter__p">Техническая поддержка и помощь пользователям:<a href="#" class="futter__link">all.yummy.anime@gmail.com</a></text></br>
