--- a/yummyanime_profile.html
+++ b/yummyanime_profile.html
@@ -2,7 +2,7 @@
 <html >
     <head >
     <meta charset="utf-8"/>
-        <title>Yummyanime</title>
+        <title>Your Profile</title>
         <link rel="stylesheet" href="yummyanime.css" type="text/css">
         <link rel="stylesheet" href="C:\Users\User\Desktop\Что-то очень нужное\HTML\tests\font-awesome-4.7.0\font-awesome-4.7.0\css/font-awesome.css">
         <style>
